--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,41 @@
 {
-    "Fullstack Developer": "Fullstack Entwickler",
-    "Contact me": "Kontakt"
+	".": "",
+	"A valid email is required.": "Bitte geben Sie eine gültige Email-Adresse ein.",
+	"About me": "Über mich",
+	"and agree to the processing of my data as outlined.": "und stimme der Verarbeitung meiner Daten wie beschrieben zu.",
+	"Angaben gemäß § 5 TMG": "",
+	"Contact": "Kontakt",
+	"Contact me": "Kontaktieren Sie mich",
+	"Contact me through this form, I am interested in hearing you, knowing your ideas and contributing to your projects with my work.": "Kontaktieren Sie mich über dieses Formular. Ich freue mich darauf, von Ihnen zu hören, Ihre Ideen kennenzulernen und mit meiner Arbeit zu Ihren Projekten beizutragen.",
+	"DE363783808": "",
+	"Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:": "",
+	"E-Mail: mail(at)tobias-termer.de": "",
+	"EU-Streitschlichtung": "",
+	"Fullstack Developer": "Fullstack-Entwickler",
+	"Get in touch": "In Kontakt treten",
+	"Got a problem to solve?": "Haben Sie ein Problem zu lösen?",
+	"Hi, I am a Front-end deverloper based in München, Germany(....)Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut auctor sem non tempus convallis. Integer et justo vitae urna finibus eleifend sit amet porttitor sapien. Donec sollicitudin massa vel lorem vestibulum efficitur.": "Hallo, ich bin ein Frontend-Entwickler aus München, Deutschland(....)Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut auctor sem non tempus convallis. Integer et justo vitae urna finibus eleifend sit amet porttitor sapien. Donec sollicitudin massa vel lorem vestibulum efficitur.",
+	"I am": "Ich bin",
+	"I have grown my frontend developments skills that have allowed me to create different real projects.": "Ich habe meine Fähigkeiten im Bereich Frontend-Entwicklung erweitert, die es mir ermöglicht haben, verschiedene reale Projekte zu erstellen.",
+	"I've read the": "Ich habe die",
+	"Impressum": "Impressum",
+	"Kontakt": "",
+	"Message is required and must be at least 10 characters.": "Eine Nachricht ist erforderlich und muss mindestens 10 Zeichen lang sein.",
+	"My skills": "Fähigkeiten",
+	"Name is required and must be at least 5 characters.": "Ein Name ist erforderlich und muss mindestens 5 Zeichen lang sein.",
+	"Need a Fullstack developer?": "Brauchen Sie einen Fullstack-Entwickler?",
+	"Portfolio": "Portfolio",
+	"Quelle:": "",
+	"Scroll down": "Scrollen Sie nach unten",
+	"Send message": "Nachricht senden",
+	"Skills": "Fähigkeiten",
+	"Some personal thing to share(...) Donec ut imperdiet diam, et convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.": "Einige persönliche Dinge zu teilen(...) Donec ut imperdiet diam, et convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.",
+	"This page is a sample of my work - please feel free to try them out.": "Diese Seite ist eine Auswahl meiner Arbeiten - bitte fühlen Sie sich frei, sie auszuprobieren.",
+	"Umsatzsteuer-ID": "",
+	"Umsatzsteuer-Identifikationsnummer gemäß $ 27 a Umsatzsteuergesetz:": "",
+	"Unsere E-Mail-Adresse finden Sie oben im Impressum.": "",
+	"Verbraucherstreitbeilegung / Universalschlichtungsstelle": "",
+	"Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.": "",
+	"You must agree to the privacy policy.": "Sie müssen der Datenschutzerklärung zustimmen.",
+	"Your message has been sent successfully!": "Ihre Nachricht wurde erfolgreich gesendet!"
 }
