--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,41 @@
 {
-    "Fullstack Developer": "Fullstack Developer",
-    "Contact me": "Contact me"
+	".": "",
+	"A valid email is required.": "",
+	"About me": "",
+	"and agree to the processing of my data as outlined.": "",
+	"Angaben gemäß § 5 TMG": "",
+	"Contact": "",
+	"Contact me": "Contact me",
+	"Contact me through this form, I am interested in hearing you, knowing your ideas and contributing to your projects with my work.": "",
+	"DE363783808": "",
+	"Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:": "",
+	"E-Mail: mail(at)tobias-termer.de": "",
+	"EU-Streitschlichtung": "",
+	"Fullstack Developer": "Fullstack Developer",
+	"Get in touch": "",
+	"Got a problem to solve?": "",
+	"Hi, I am a Front-end deverloper based in München, Germany(....)Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut auctor sem non tempus convallis. Integer et justo vitae urna finibus eleifend sit amet porttitor sapien. Donec sollicitudin massa vel lorem vestibulum efficitur.": "",
+	"I am": "",
+	"I have grown my frontend developments skills that have allowed me to create different real projects.": "",
+	"I've read the": "",
+	"Impressum": "",
+	"Kontakt": "",
+	"Message is required and must be at least 10 characters.": "",
+	"My skills": "",
+	"Name is required and must be at least 5 characters.": "",
+	"Need a Fullstack developer?": "",
+	"Portfolio": "",
+	"Quelle:": "",
+	"Scroll down": "",
+	"Send message": "",
+	"Skills": "",
+	"Some personal thing to share(...) Donec ut imperdiet diam, et convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.": "",
+	"This page is a sample of my work - please feel free to try them out.": "",
+	"Umsatzsteuer-ID": "",
+	"Umsatzsteuer-Identifikationsnummer gemäß $ 27 a Umsatzsteuergesetz:": "",
+	"Unsere E-Mail-Adresse finden Sie oben im Impressum.": "",
+	"Verbraucherstreitbeilegung / Universalschlichtungsstelle": "",
+	"Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.": "",
+	"You must agree to the privacy policy.": "",
+	"Your message has been sent successfully!": ""
 }
